--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:eslint-plugin-next-on-pages/recommended"
-  ],
-  "plugins": ["eslint-plugin-next-on-pages"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-img-element": "off"
